fix: make buttons on blocked page invisible

--- a/src/style/button.css
+++ b/src/style/button.css
@@ -16,6 +16,10 @@ button.link {
   color: grey;
 }
 
+button.invisible {
+  display: none;
+}
+
 .button-black {
   background-color: white;
   border: 2px solid black;
